dcback/systemd/envoy/dcfront.yaml
admin:
  access_log_path: "/etc/envoy/dcfront/dcfront_access.log"
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["front.digicod.eu"]
              routes:
              - match: { prefix: "/ws" }
                route: { cluster: gunicorn_cluster }
              - match: { prefix: "/rest" }
                route: { cluster: gunicorn_cluster }
              - match: { prefix: "/api" }
                route: { cluster: gunicorn_cluster }
              - match: { prefix: "/" }
                route: { cluster: service_cluster }
          http_filters: 
          - name: envoy.filters.http.router

  - name: listener_1
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_https
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["front.digicod.eu"]
              routes:
              - match: { prefix: "/ws" }
                route: { cluster: gunicorn_cluster }
              - match: { prefix: "/rest" }
                route: { cluster: gunicorn_cluster }
              - match: { prefix: "/api" }
                route: { cluster: gunicorn_cluster }
              - match: { prefix: "/" }
                route: { cluster: service_cluster }
          http_filters:
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: /etc/letsencrypt/live/front.digicod.eu/fullchain.pem
              private_key:
                filename: /etc/letsencrypt/live/front.digicod.eu/privkey.pem

  clusters:
  - name: service_cluster
    connect_timeout: 65s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: TCP
                address: 127.0.0.1
                port_value: 5174
  - name: gunicorn_cluster
    connect_timeout: 65s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: gunicorn_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: "/home/dcback/systemd/gunicorn/gunicorn.sock"
